--- a/index.html
+++ b/index.html
@@ -20,8 +20,81 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+
+        <div class="site-container">
+
+          <div id="global-navigation"><!-- Katie Zawadowicz -->
+
+            Global / site-wide navigation
+
+          </div><!-- End #global-navigation -->
+
+
+
+
+
+          <div id="intro-section"><!-- Jacob Bendan -->
+
+            Introduction / hook section
+
+          </div><!-- End #intro-section -->
+
+
+
+
+          <div id="mission-section"><!-- Bill Ford -->
+
+            Mission / about section
+
+          </div><!-- End #mission-section -->
+
+
+
+
+          <div id="who-section"><!-- Sara Cantler -->
+
+            Who we are / bios section
+
+          </div><!-- End #who-section -->
+
+
+
+
+          <div id="gallery-section"><!-- Kelly O'Donnell / Eric Conrad -->
+
+            Gallery / work section
+
+          </div><!-- End #gallery-section -->
+
+
+
+
+          <div id="contact-section"><!-- Seth Budrow -->
+
+            Contact section
+
+          </div><!-- End #contact-section -->
+
+
+
+
+
+          <div id="global-footer"><!-- Katie Zawadowicz -->
+
+            Global / site-wide footer
+
+          </div><!-- End #global-footer -->
+
+
+
+
+
+
+        </div>
+
+
+
+
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
