Added very basic information to the html for navigation and footer
Added names of buttons (Home, Mission, Who We Are, Gallery and Work
With Us)

Added email address and school address to footer

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 
           <div id="global-navigation"><!-- Katie Zawadowicz -->
 
-            Global / site-wide navigation
+            <button> Home </button>
+            <button> Mission </button>
+            <button> Who We Are </button>
+            <button> Gallery </button>
+            <button> Work With Us </button>
+
 
           </div><!-- End #global-navigation -->
 
@@ -81,7 +86,15 @@
 
           <div id="global-footer"><!-- Katie Zawadowicz -->
 
-            Global / site-wide footer
+            <p> designalliance.hcc@gmail.com </p>
+            <p> Harford Community College
+                c/o Design Alliance
+                Visual, Preforming & Applied Arts
+                Art + Design Program
+                401 Thomas Run Road
+                Bel Air, MD 21015
+            </p>
+            <a href="https://www.facebook.com/Design-Alliance-154206664664725/"> <img src=""/> </a>
 
           </div><!-- End #global-footer -->
 
