added bio background, making "who we are" button work

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <button> Home </button>
             <button> Mission </button>
-            <button> Who We Are </button>
+            <button><a href="bio.html"> Who We Are </button>
             <button> Gallery </button>
             <button> Work With Us </button>
 
