changed global-nav to use <a class="button"> instead of <button>
Need to do this to actually direct the user to the new page. Can use
the button class to add styles to links

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
           <div id="global-navigation"><!-- Katie Zawadowicz -->
 
-            <button> Home </button>
-            <button> Mission </button>
-            <button><a href="bio.html"> Who We Are </button>
-            <button> Gallery </button>
-            <button> Work With Us </button>
+            <a class="button"> Home </a>
+            <a class="button"> Mission </a>
+            <a class="button" href="bios.html"> Who We Are </a>
+            <a class="button"> Gallery </a>
+            <a class="button"> Work With Us </a>
 
 
           </div><!-- End #global-navigation -->
