--- a/bios.html
+++ b/bios.html
@@ -23,9 +23,9 @@
 
           <h1>bios</h1>
 
-          <img class="background" src="images/bios/backgroundbio.png" width="100%" />
-
             <div class="content">
+
+              <div class="background" src="images/bios/backgroundbio.png" width="100%" />
 
               <div class="Alison">
                 <a target="_blank" href="images/bios/alisonhazle.jpg">
