--- a/bios.html
+++ b/bios.html
@@ -23,41 +23,41 @@
 
           <h1>bios</h1>
 
-            <div class="content">
+          <div class="background">
 
-              <div class="background" src="images/bios/backgroundbio.png" width="100%" />
+            <div class="content">
 
               <div class="Alison">
                 <a target="_blank" href="images/bios/alisonhazle.jpg">
-                  <img src="images/bios/alison.png" alt="alison.png" width="200" />
+                  <img src="images/bios/alison.png" alt="alison.png" width="100" />
                 </a>
                 <h3>Alison</h3>
               </div>
 
               <div class="courtney">
                 <a target="_blank" href="images/bios/courtneyschultz.jpg">
-                  <img src="images/bios/courtney.png" alt="courtney.png" width="200" />
+                  <img src="images/bios/courtney.png" alt="courtney.png" width="100" />
                 </a>
                 <h3>Courtney</h3>
               </div>
 
               <div class="deanna">
                 <a target="_blank" href="images/bios/deannamarino.jpg">
-                  <img src="images/bios/deanna.png" alt="courtney.png" width="200" />
+                  <img src="images/bios/deanna.png" alt="courtney.png" width="100" />
                 </a>
                 <h3>Deanna</h3>
               </div>
 
               <div class="nikki">
                 <a target="_blank" href="images/bios/nikkiishak.jpg">
-                  <img src="images/bios/nikki.png" alt="nikki.png" width="200" />
+                  <img src="images/bios/nikki.png" alt="nikki.png" width="100" />
                 </a>
                 <h3>Nikki</h3>
               </div>
 
               <div class="phoebe">
                 <a target="_blank" href="images/bios/phoebemonroe.jpg">
-                  <img src="images/bios/phoebe.png" alt="phoebe.png" width="200" />
+                  <img src="images/bios/phoebe.png" alt="phoebe.png" width="100" />
                 </a>
                 <h3>Phoebe</h3>
               </div>
