Added images and ID tags
I added images and ID tags to the bios section on the main page.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,16 @@
 
           <div id="who-section"><!-- Sara Cantler -->
 
-            Who we are / bios section
+            <!--Images-->
+            <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\deanna.png" id="Advisor" style="width:128px;height:128px;">
+            <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\alison.png" id="President" style="width:128px;height:128px;">
+            <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\courtney.png" id="Vice-President" style="width:128px;height:128px;">
+            <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\nikki.png" id="Secretary" style="width:128px;height:128px;">
+            <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\phoebe.png" id="Treasurer" style="width:128px;height:128px;">
+
+            <!--Names-->
+
+
 
           </div><!-- End #who-section -->
 
