Deleted image codes, added individual divs
Added individual divs to house both the images and the text for each
individual person. Deleted previous images.

--- a/index.html
+++ b/index.html
@@ -56,14 +56,31 @@
 
           <div id="who-section"><!-- Sara Cantler -->
 
-            <!--Images-->
-            <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\deanna.png" id="Advisor" style="width:128px;height:128px;">
-            <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\alison.png" id="President" style="width:128px;height:128px;">
-            <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\courtney.png" id="Vice-President" style="width:128px;height:128px;">
-            <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\nikki.png" id="Secretary" style="width:128px;height:128px;">
-            <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\phoebe.png" id="Treasurer" style="width:128px;height:128px;">
+            <div id="Advisor">
+              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\deanna.png" alt="Advisor" style="width:128px;height:128px;">
+              <p>Advisor</p>
+            </div>
 
-            <!--Names-->
+            <div id="President">
+              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\alison.png" id="President" style="width:128px;height:128px;">
+              <p>President</p>
+            </div>
+
+            <div id="Vice-President">
+              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\courtney.png" id="Vice-President" style="width:128px;height:128px;">
+              <p>Vice-President</p>
+            </div>
+
+            <div id="Secretary">
+              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\nikki.png" id="Secretary" style="width:128px;height:128px;">
+              <p>Secretary</p>
+            </div>
+
+            <div id="Treasurer">
+              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\phoebe.png" id="Treasurer" style="width:128px;height:128px;">
+              <p>Treasurer</p>
+            </div>
+
 
 
 
