--- a/index.html
+++ b/index.html
@@ -58,26 +58,31 @@
 
             <div id="Advisor">
               <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\deanna.png" alt="Advisor" style="width:128px;height:128px;">
+              <p>Kenneth Jones</p>
               <p>Advisor</p>
             </div>
 
             <div id="President">
               <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\alison.png" id="President" style="width:128px;height:128px;">
+              <p>Alison Hazel</p>
               <p>President</p>
             </div>
 
             <div id="Vice-President">
               <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\courtney.png" id="Vice-President" style="width:128px;height:128px;">
+              <p>Courtney Schultz</p>
               <p>Vice-President</p>
             </div>
 
             <div id="Secretary">
               <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\nikki.png" id="Secretary" style="width:128px;height:128px;">
+              <p>Nikki Ishak</p>
               <p>Secretary</p>
             </div>
 
             <div id="Treasurer">
               <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\phoebe.png" id="Treasurer" style="width:128px;height:128px;">
+              <p>Phoebe Monroe</p>
               <p>Treasurer</p>
             </div>
 
