--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
           <div id="who-section"><!-- Sara Cantler -->
 
+            <h1>Members</h1>
+
             <div id="Advisor">
               <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\deanna.png" alt="Advisor" style="width:128px;height:128px;">
               <p>Kenneth Jones</p>
