Made each line of address <p> to make it easier to manipulate.
Also added Facebook [ f ] logo to .html and linked it to their Facebook
page

--- a/index.html
+++ b/index.html
@@ -131,14 +131,15 @@
           <div id="global-footer"><!-- Katie Zawadowicz -->
 
             <p> designalliance.hcc@gmail.com </p>
-            <p> Harford Community College
-                c/o Design Alliance
-                Visual, Preforming & Applied Arts
-                Art + Design Program
-                401 Thomas Run Road
-                Bel Air, MD 21015
-            </p>
-            <a href="https://www.facebook.com/Design-Alliance-154206664664725/"> <img src=""/> </a>
+
+            <p> Harford Community College </p>
+            <p>  c/o Design Alliance </p>
+            <p>  Visual, Preforming & Applied Arts </p>
+            <p>  Art + Design Program </p>
+            <p>  401 Thomas Run Road </p>
+            <p>  Bel Air, MD 21015 </p>
+
+            <a href="https://www.facebook.com/Design-Alliance-154206664664725/"> <img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook </a>
 
           </div><!-- End #global-footer -->
 
