ID TAGS: Changed to ALT tags.
I did this because making them ID tags was as goof. i wanted them as
alt tags. So I changed them to that.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
 
             <div id="President">
-              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\alison.png" id="President-Photo" style="width:128px;height:128px;">
+              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\alison.png" alt="President-Photo" style="width:128px;height:128px;">
               <p>Alison Hazel</p>
               <p>President</p>
               <a href="url">View Profile</a>
@@ -74,7 +74,7 @@
             </div>
 
             <div id="Vice-President">
-              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\courtney.png" id="Vice-President-Photo" style="width:128px;height:128px;">
+              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\courtney.png" alt="Vice-President-Photo" style="width:128px;height:128px;">
               <p>Courtney Schultz</p>
               <p>Vice-President</p>
               <a href="url">View Profile</a>
@@ -82,7 +82,7 @@
             </div>
 
             <div id="Secretary">
-              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\nikki.png" id="Secretary-Photo" style="width:128px;height:128px;">
+              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\nikki.png" alt="Secretary-Photo" style="width:128px;height:128px;">
               <p>Nikki Ishak</p>
               <p>Secretary</p>
               <a href="url">View Profile</a>
@@ -90,7 +90,7 @@
             </div>
 
             <div id="Treasurer">
-              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\phoebe.png" id="Treasurer-Photo" style="width:128px;height:128px;">
+              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\phoebe.png" alt="Treasurer-Photo" style="width:128px;height:128px;">
               <p>Phoebe Monroe</p>
               <p>Treasurer</p>
               <a href="url">View Profile</a>
