added basic Gallery homepage html formatting

--- a/index.html
+++ b/index.html
@@ -111,7 +111,13 @@
 
           <div id="gallery-section"><!-- Kelly O'Donnell / Eric Conrad -->
 
-            Gallery / work section
+            <h1>Gallery</h1>
+
+
+             <div id="photoLink">
+               <a href="gallery.html">View All Works</a>
+             </div>
+
 
           </div><!-- End #gallery-section -->
 
