tested cropped photos in home html gallery

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
           <div id="gallery-section"><!-- Kelly O'Donnell / Eric Conrad -->
 
             <h1>Gallery</h1>
-
+            <img src="images/gallery/crops/Williams1.jpg">
+            <img src="images/gallery/crops/Williams2.jpg">
 
              <div id="photoLink">
                <a href="gallery.html">View All Works</a>
