added two crop images

--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,11 @@
   <div class="site-container">
 
     <div class="gallery">
-    
+      <div class="gallery">
+      <img src="images/gallery/crops/Williams1.jpg">
+      <img src="images/gallery/crops/Williams2.jpg">
+
+    </div>
 
     </div>
 
