added cropped gallery images to homepage

--- a/index.html
+++ b/index.html
@@ -112,8 +112,15 @@
           <div id="gallery-section"><!-- Kelly O'Donnell / Eric Conrad -->
 
             <h1>Gallery</h1>
+
             <img src="images/gallery/crops/Williams1.jpg">
             <img src="images/gallery/crops/Williams2.jpg">
+            <img src="images/gallery/crops/harris4.jpg">
+            <img src="images/gallery/crops/Lu1.jpg">
+            <img src="images/gallery/crops/printdummymartin.jpg">
+            <img src="images/gallery/crops/rakowski.jpg">
+            <img src="images/gallery/crops/Schultz62.jpg">
+            <img src="images/gallery/crops/tapelifting3.jpg">
 
              <div id="photoLink">
                <a href="gallery.html">View All Works</a>
