added rest of cropped images to gallery landing page

--- a/gallery.html
+++ b/gallery.html
@@ -22,9 +22,15 @@
   <div class="site-container">
 
     <div class="gallery">
-      <div class="gallery">
+
       <img src="images/gallery/crops/Williams1.jpg">
       <img src="images/gallery/crops/Williams2.jpg">
+      <img src="images/gallery/crops/harris4.jpg">
+      <img src="images/gallery/crops/Lu1.jpg">
+      <img src="images/gallery/crops/printdummymartin.jpg">
+      <img src="images/gallery/crops/rakowski.jpg">
+      <img src="images/gallery/crops/Schultz62.jpg">
+      <img src="images/gallery/crops/tapelifting3.jpg">
 
     </div>
 
