Changed ID tags to class tags, moved styles to css
Conflicts:
	css/main.css
	css/main.css.map

--- a/index.html
+++ b/index.html
@@ -58,43 +58,42 @@
 
             <h1>Members</h1>
 
-            <div id="Advisor">
-              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\deanna.png" alt="Advisor-Photo" style="width:128px;height:128px;">
+            <div class="profile advisor">
+              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\deanna.png" alt="Advisor-Photo">
               <p>Kenneth Jones</p>
               <p>Advisor</p>
               <a href="url">View Profile</a>
             </div>
 
-            <div id="President">
-              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\alison.png" alt="President-Photo" style="width:128px;height:128px;">
+            <div class="profile president">
+              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\alison.png" alt="President-Photo">
               <p>Alison Hazel</p>
               <p>President</p>
               <a href="url">View Profile</a>
 
             </div>
 
-            <div id="Vice-President">
-              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\courtney.png" alt="Vice-President-Photo" style="width:128px;height:128px;">
+            <div class="profile vice-president">
+              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\courtney.png" alt="Vice-President-Photo">
               <p>Courtney Schultz</p>
               <p>Vice-President</p>
               <a href="url">View Profile</a>
 
             </div>
 
-            <div id="Secretary">
-              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\nikki.png" alt="Secretary-Photo" style="width:128px;height:128px;">
+            <div class="profile secretary">
+              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\nikki.png" alt="Secretary-Photo">
               <p>Nikki Ishak</p>
               <p>Secretary</p>
               <a href="url">View Profile</a>
 
             </div>
 
-            <div id="Treasurer">
-              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\phoebe.png" alt="Treasurer-Photo" style="width:128px;height:128px;">
+            <div class="profile treasurer">
+              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\phoebe.png" alt="Treasurer-Photo">
               <p>Phoebe Monroe</p>
               <p>Treasurer</p>
               <a href="url">View Profile</a>
-
             </div>
 
             <a href="url">View All Profiles</a>
@@ -111,7 +110,21 @@
 
           <div id="gallery-section"><!-- Kelly O'Donnell / Eric Conrad -->
 
-            Gallery / work section
+            <h1>Gallery</h1>
+
+            <img src="images/gallery/crops/Williams1.jpg">
+            <img src="images/gallery/crops/Williams2.jpg">
+            <img src="images/gallery/crops/harris4.jpg">
+            <img src="images/gallery/crops/Lu1.jpg">
+            <img src="images/gallery/crops/printdummymartin.jpg">
+            <img src="images/gallery/crops/rakowski.jpg">
+            <img src="images/gallery/crops/Schultz62.jpg">
+            <img src="images/gallery/crops/tapelifting3.jpg">
+
+             <div id="photoLink">
+               <a href="gallery.html">View All Works</a>
+             </div>
+
 
           </div><!-- End #gallery-section -->
 
