test gallery carousel html formatting

--- a/index.html
+++ b/index.html
@@ -113,14 +113,51 @@
 
             <h1>Gallery</h1>
 
-            <img src="images/gallery/crops/Williams1.jpg">
-            <img src="images/gallery/crops/Williams2.jpg">
-            <img src="images/gallery/crops/harris4.jpg">
-            <img src="images/gallery/crops/Lu1.jpg">
-            <img src="images/gallery/crops/printdummymartin.jpg">
-            <img src="images/gallery/crops/rakowski.jpg">
-            <img src="images/gallery/crops/Schultz62.jpg">
-            <img src="images/gallery/crops/tapelifting3.jpg">
+            <div id="carousel">
+
+              <nav>
+                  <a href="" class="active"></a>
+                  <a href=""></a>
+                  <a href=""></a>
+                </nav>
+
+                <div class="inner">
+                  <ul>
+                    <li>
+                      <a href="">
+                        <img src="images/gallery/crops/Williams1.jpg" alt="">
+                      </a>
+                    </li>
+                    <li>
+                      <a href="">
+                        <img src="images/gallery/crops/Williams2.jpg" alt="">
+                      </a>
+                    </li>
+                    <li>
+                      <a href="">
+                        <img src="images/gallery/crops/harris4.jpg" alt="">
+                      </a>
+                    </li>
+                    <li>
+                      <a href="">
+                        <img src="images/gallery/crops/Lu1.jpg" alt="">
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+
+
+              <!-- <img src="images/gallery/crops/Williams2.jpg">
+              <img src="images/gallery/crops/harris4.jpg">
+              <img src="images/gallery/crops/Lu1.jpg">
+              <img src="images/gallery/crops/printdummymartin.jpg">
+              <img src="images/gallery/crops/rakowski.jpg">
+              <img src="images/gallery/crops/Schultz62.jpg">
+              <img src="images/gallery/crops/tapelifting3.jpg"> -->
+
+            </div>
 
              <div id="photoLink">
                <a href="gallery.html">View All Works</a>
