anchored two images to fancy box js

--- a/gallery.html
+++ b/gallery.html
@@ -12,6 +12,7 @@
 
   <link rel="stylesheet" href="css/vendor/normalize.css">
   <link rel="stylesheet" href="css/vendor/html5-main.css">
+  <link rel="stylesheet" href="js/vendor/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="css/main.css">
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -23,8 +24,8 @@
 
     <div class="gallery">
 
-      <img src="images/gallery/crops/Williams1.jpg">
-      <img src="images/gallery/crops/Williams2.jpg">
+      <a class="fancybox" rel="illustration" href="images/gallery/Williams-9-8(10.5 by 10.5).jpg"><img src="images/gallery/crops/Williams1.jpg"></a>
+      <a class="fancybox" rel="illustration" href="images/gallery/Williams-12-9-1.psd(10.5 by 10.5).jpg"><img src="images/gallery/crops/Williams2.jpg"></a>
       <img src="images/gallery/crops/harris4.jpg">
       <img src="images/gallery/crops/Lu1.jpg">
       <img src="images/gallery/crops/printdummymartin.jpg">
@@ -59,7 +60,9 @@
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
+  <script type="text/javascript" src="js/vendor/fancybox/jquery.fancybox.pack.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/gallery.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <!-- <script>
