--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
           <div id="global-navigation"><!-- Katie Zawadowicz -->
 
-            <a class="button"> Home </a>
-            <a class="button"> Mission </a>
+            <a class="button" href="index.html"> Home </a>
+            <a class="button" href=""> Mission </a>
             <a class="button" href="bios.html"> Who We Are </a>
-            <a class="button"> Gallery </a>
-            <a class="button"> Work With Us </a>
+            <a class="button" href="gallery.html"> Gallery </a>
+            <a class="button" href=""> Work With Us </a>
 
 
           </div><!-- End #global-navigation -->
