--- a/index.html
+++ b/index.html
@@ -59,43 +59,42 @@
             <h1>Members</h1>
 
             <div class="profile advisor">
-              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\deanna.png" alt="Advisor-Photo">
-              <p>Kenneth Jones</p>
-              <p>Advisor</p>
+              <img src="images/bios/deanna.png" alt="Advisor-Photo">
+              <p class="main-text">Kenneth Jones</p>
+              <p class="subtext">Advisor</p>
               <a href="url">View Profile</a>
             </div>
 
             <div class="profile president">
-              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\alison.png" alt="President-Photo">
-              <p>Alison Hazel</p>
-              <p>President</p>
+              <img src="images/bios/alison.png" alt="President-Photo">
+              <p class="main-text">Alison Hazel</p>
+              <p class="subtext">President</p>
               <a href="url">View Profile</a>
 
             </div>
 
             <div class="profile vice-president">
-              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\courtney.png" alt="Vice-President-Photo">
-              <p>Courtney Schultz</p>
-              <p>Vice-President</p>
+              <img src="images/bios/courtney.png" alt="Vice-President-Photo">
+              <p class="main-text">Courtney Schultz</p>
+              <p class="subtext">Vice-President</p>
               <a href="url">View Profile</a>
 
             </div>
 
             <div class="profile secretary">
-              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\nikki.png" alt="Secretary-Photo">
-              <p>Nikki Ishak</p>
-              <p>Secretary</p>
+              <img src="images/bios/nikki.png" alt="Secretary-Photo">
+              <p class="main-text">Nikki Ishak</p>
+              <p class="subtext">Secretary</p>
               <a href="url">View Profile</a>
 
             </div>
 
             <div class="profile treasurer">
-              <img src="C:\Users\Sara\Desktop\Design-Alliance\images\bios\phoebe.png" alt="Treasurer-Photo">
-              <p>Phoebe Monroe</p>
-              <p>Treasurer</p>
+              <img src="images/bios/phoebe.png" alt="Treasurer-Photo">
+              <p class="main-text">Phoebe Monroe</p>
+              <p class="subtext">Treasurer</p>
               <a href="url">View Profile</a>
             </div>
-
             <a href="url">View All Profiles</a>
 
 
