added see-all button to bios homepage section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
               <p class="subtext">Treasurer</p>
               <a href="url">View Profile</a>
             </div>
-            <a href="url">View All Profiles</a>
+
+            <a class="see-all" href="url">View All Profiles</a>
 
 
 
