--- a/bios.html
+++ b/bios.html
@@ -28,40 +28,40 @@
 
           <div class="content">
 
-              <div class="Alison">
-                <a target="_blank" href="images/bios/alisonhazle.jpg">
-                  <img src="images/bios/alison.png" alt="alison.png" width="80" />
-                </a>
-                <h4>Alison</h4>
-              </div>
+            <div class="alison">
+              <a target="_blank" href="bios/alison-hazle.html">
+                <img src="images/bios/alison.png" alt="alison.png" width="80" />
+              </a>
+              <h4>Alison</h4>
+            </div>
 
-              <div class="courtney">
-                <a target="_blank" href="images/bios/courtneyschultz.jpg">
-                  <img src="images/bios/courtney.png" alt="courtney.png" width="80" />
-                </a>
-                <h4>Courtney</h4>
-              </div>
+            <div class="courtney">
+              <a target="_blank" href="bios/courtney-schultz.html">
+                <img src="images/bios/courtney.png" alt="courtney.png" width="80" />
+              </a>
+              <h4>Courtney</h4>
+            </div>
 
-              <div class="deanna">
-                <a target="_blank" href="images/bios/deannamarino.jpg">
-                  <img src="images/bios/deanna.png" alt="courtney.png" width="80" />
-                </a>
-                <h4>Deanna</h4>
-              </div>
+            <div class="deanna">
+              <a target="_blank" href="bios/deanna-marino.html">
+                <img src="images/bios/deanna.png" alt="courtney.png" width="80" />
+              </a>
+              <h4>Deanna</h4>
+            </div>
 
-              <div class="nikki">
-                <a target="_blank" href="images/bios/nikkiishak.jpg">
-                  <img src="images/bios/nikki.png" alt="nikki.png" width="80" />
-                </a>
-                <h4>Nikki</h4>
-              </div>
+            <div class="nikki">
+              <a target="_blank" href="bios/nikki-ishak.html">
+                <img src="images/bios/nikki.png" alt="nikki.png" width="80" />
+              </a>
+              <h4>Nikki</h4>
+            </div>
 
-              <div class="phoebe">
-                <a target="_blank" href="images/bios/phoebemonroe.jpg">
-                  <img src="images/bios/phoebe.png" alt="phoebe.png" width="80" />
-                </a>
-                <h4>Phoebe</h4>
-              </div>
+            <div class="phoebe">
+              <a target="_blank" href="bios/phoebe-monroe.html">
+                <img src="images/bios/phoebe.png" alt="phoebe.png" width="80" />
+              </a>
+              <h4>Phoebe</h4>
+            </div>
 
           </div>
 
