--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                   <a href="" class="active"></a>
                   <a href=""></a>
                   <a href=""></a>
+                  <a href=""></a>
                 </nav>
 
                 <div class="inner">
