added images for first works page
added an image and the artists name

--- a/works/works.html
+++ b/works/works.html
@@ -21,6 +21,24 @@
         <![endif]-->
         <div class="site-container">
 
+          <!--<div>
+            <img src="../images/gallery/tapelifting_monroe-05.jpg"/>
+          </div>
+          <div>
+            <img id="name" src="../works/images/Screen Shot 2016-05-04 at 8.38.15 PM.png"/>
+          </div>
+-->
+
+
+
+          <div id="image123">
+              <div id="imgContainer">
+                  <img src="../images/gallery/tapelifting_monroe-05.jpg" width="600px"/>
+              </div>
+              <div id="imgContainer">
+                  <img src="../works/images/Screen Shot 2016-05-04 at 8.38.15 PM.png" width="250px"/>
+              </div>
+          </div>
 
 
 
@@ -37,7 +55,13 @@
 
 
 
-          <div id="global-footer"><!-- Katie Zawadowicz -->
+
+
+
+
+
+
+          <div id="global-footer" margin-left="auto" margin="auto"><!-- Katie Zawadowicz -->
 
             <p> designalliance.hcc@gmail.com </p>
             <p> Harford Community College
@@ -47,8 +71,7 @@
                 401 Thomas Run Road
                 Bel Air, MD 21015
             </p>
-            <a href="https://www.facebook.com/Design-Alliance-154206664664725/"> <img src=""/> </a>
-
+            <!--<a href="https://www.facebook.com/Design-Alliance-154206664664725/"> <img src=""/> </a>-->
           </div><!-- End #global-footer -->
 
 
