added bio text to individual pages

--- a/bios/alison-hazle.html
+++ b/bios/alison-hazle.html
@@ -24,6 +24,16 @@
 
     <h1>Alison Hazle</h1>
 
+    <p>“I AM a student, artist, and animal rights activist currently
+      residing in Harford County, Maryland. I studied fine arts with a
+      focus in painting. Desiring a more fast-paced learning environment
+      and dynamic community. I moved to Philidelphia and enrolled at the
+      University of Arts where I studied Interdiciplinary Fine Arts. I
+      eventually left UArts, moving to Saugerties, NY where I worked at C
+      atskill Animal Sanctuary doing public outreach. Now back at Harford
+      Community I am continuing my study within the art exibit my work
+      in the tri-state area.”
+    </p>
 
     <div id="global-footer"><!-- Katie Zawadowicz -->
 
