--- a/bios/deanna-marino.html
+++ b/bios/deanna-marino.html
@@ -24,6 +24,16 @@
 
     <h1>Deanna Marino</h1>
 
+    <p>I was born in Fayetteville, North Carolina and currently living
+      in Harford County, Maryland. I’m a part time high school senior and
+      part time college freshman. Freelance graphic design/digital artist
+      (founding my company Deanna Joy Marino Works) specializing in Advertising
+      Design. I have employed my skills most recently directing three full-
+      scale theatrical productions and curating local art exhibitions. My
+      hobbies include seeing movies and plays and I collect buttons and
+      feathers!
+    </p>
+
 
     <div id="global-footer"><!-- Katie Zawadowicz -->
 
