--- a/bios/courtney-schultz.html
+++ b/bios/courtney-schultz.html
@@ -24,6 +24,15 @@
 
     <h1>Courtney Schultz</h1>
 
+    <p>I am a photography and fine arts student based out of Harford
+      County, Maryland. I am an adventure enthusiast and made art all
+      across the US and China. While running my own photography and floral
+      design business, in addition to full time work and school, I still
+      dedicate time to work on my fine art pieces. My work ranges from still
+      life to prints to metal sculptures. My work has been exhibited and placed
+      in shows. I hope to one day live in a small cabin in the woods, making
+      art and possibly curating for a gallery.
+    </p>
 
     <div id="global-footer"><!-- Katie Zawadowicz -->
 
