--- a/works/works.html
+++ b/works/works.html
@@ -31,14 +31,14 @@
 
 
 
-          <div id="image123">
-              <div id="imgContainer">
-                  <img src="../images/gallery/tapelifting_monroe-05.jpg" width="600px"/>
+          <!--<div id="imgContainer">-->
+              <div id="img123">
+                  <img src="../images/gallery/tapelifting_monroe-05.jpg"/>
               </div>
-              <div id="imgContainer">
+              <!--<div id="img321">
                   <img src="../works/images/Screen Shot 2016-05-04 at 8.38.15 PM.png" width="250px"/>
               </div>
-          </div>
+          </div>-->
 
 
 
@@ -61,9 +61,9 @@
 
 
 
-          <div id="global-footer" margin-left="auto" margin="auto"><!-- Katie Zawadowicz -->
+        <!--  <div id="global-footer" margin-left="auto" margin="auto"><!-- Katie Zawadowicz -->
 
-            <p> designalliance.hcc@gmail.com </p>
+        <!--<p> designalliance.hcc@gmail.com </p>
             <p> Harford Community College
                 c/o Design Alliance
                 Visual, Preforming & Applied Arts
@@ -72,7 +72,7 @@
                 Bel Air, MD 21015
             </p>
             <!--<a href="https://www.facebook.com/Design-Alliance-154206664664725/"> <img src=""/> </a>-->
-          </div><!-- End #global-footer -->
+            <!--  </div><!-- End #global-footer -->
 
 
 
