added clear fix to gallery section ul
this feels like work that was done previously which worries me

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </nav>
 
         <div class="inner">
-          <ul>
+          <ul class="clearfix">
             <li>
               <a href="works/works.html">
                 <img src="images/gallery/crops/Williams1.jpg" alt="">
