added photos of members to individual pages

--- a/bios/alison-hazle.html
+++ b/bios/alison-hazle.html
@@ -35,6 +35,11 @@
       in the tri-state area.”
     </p>
 
+    <div class="member alison">
+        <img src=".images/bios/alison.png"/>
+        <h3> President </h3>
+    </div>
+
     <div id="global-footer"><!-- Katie Zawadowicz -->
 
       <p> designalliance.hcc@gmail.com </p>
