--- a/bios/courtney-schultz.html
+++ b/bios/courtney-schultz.html
@@ -34,6 +34,11 @@
       art and possibly curating for a gallery.
     </p>
 
+    <div class="member courtney">
+        <img src=".images/bios/courtney.png"/>
+        <h3> Vice-President </h3>
+    </div>
+
     <div id="global-footer"><!-- Katie Zawadowicz -->
 
       <p> designalliance.hcc@gmail.com </p>
