--- a/bios/deanna-marino.html
+++ b/bios/deanna-marino.html
@@ -34,6 +34,10 @@
       feathers!
     </p>
 
+    <div class="member deanna">
+        <img src=".images/bios/deanna.png"/>
+        <h3> Member </h3>
+    </div>
 
     <div id="global-footer"><!-- Katie Zawadowicz -->
 
