--- a/bios/nikki-ishak.html
+++ b/bios/nikki-ishak.html
@@ -35,6 +35,11 @@
       stuffed animals and dream of traveling to Mars.
     </p>
 
+    <div class="member nikki">
+        <img src=".images/bios/nikki.png"/>
+        <h3> Secretary </h3>
+    </div>
+
 
     <div id="global-footer"><!-- Katie Zawadowicz -->
 
