--- a/bios/phoebe-monroe.html
+++ b/bios/phoebe-monroe.html
@@ -33,6 +33,12 @@
       others and I are learn to develop, plan, and produce an exhibition.
     </p>
 
+    <div class="member phoebe">
+        <img src=".images/bios/phoebe.png"/>
+        <h3> Treasurer </h3>
+    </div>
+
+
 
     <div id="global-footer"><!-- Katie Zawadowicz -->
 
