--- a/bios.html
+++ b/bios.html
@@ -15,48 +15,49 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
+
     <body id="bios-page">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="site-container">
 
-          <h1>bios</h1>
+          <h1>Who We Are</h1>
 
           <div class="background">
           </div>
 
           <div class="content">
 
-            <div class="alison">
+            <div class="member alison">
               <a target="_blank" href="bios/alison-hazle.html">
                 <img src="images/bios/alison.png" alt="alison.png" width="80" />
               </a>
               <h4>Alison</h4>
             </div>
 
-            <div class="courtney">
+            <div class="member courtney">
               <a target="_blank" href="bios/courtney-schultz.html">
                 <img src="images/bios/courtney.png" alt="courtney.png" width="80" />
               </a>
               <h4>Courtney</h4>
             </div>
 
-            <div class="deanna">
+            <div class="member deanna">
               <a target="_blank" href="bios/deanna-marino.html">
                 <img src="images/bios/deanna.png" alt="courtney.png" width="80" />
               </a>
               <h4>Deanna</h4>
             </div>
 
-            <div class="nikki">
+            <div class="member nikki">
               <a target="_blank" href="bios/nikki-ishak.html">
                 <img src="images/bios/nikki.png" alt="nikki.png" width="80" />
               </a>
               <h4>Nikki</h4>
             </div>
 
-            <div class="phoebe">
+            <div class="member phoebe">
               <a target="_blank" href="bios/phoebe-monroe.html">
                 <img src="images/bios/phoebe.png" alt="phoebe.png" width="80" />
               </a>
