added a clear fix to bios page .content

--- a/bios.html
+++ b/bios.html
@@ -27,7 +27,7 @@
           <div class="background">
           </div>
 
-          <div class="content">
+          <div class="content clearfix">
 
             <div class="member alison">
               <a target="_blank" href="bios/alison-hazle.html">
