--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   <![endif]-->
   <div class="site-container">
 
-    <div id="global-navigation" class="clearfix"><!-- Katie Zawadowicz -->
+    <div id="global-navigation" class="section row"><!-- Katie Zawadowicz -->
 
       <a class="button" href="index.html"> Home </a>
-      <a class="button" href=""> Mission </a>
+      <a class="button" href="#mission"> Mission </a>
       <a class="button" href="bios.html"> Who We Are </a>
       <a class="button" href="gallery.html"> Gallery </a>
       <a class="button" href=""> Work With Us </a>
@@ -38,7 +38,7 @@
 
 
 
-    <div id="intro-section" class="clearfix"><!-- Jacob Bendan -->
+    <div id="intro-section" class="section row"><!-- Jacob Bendan -->
 
       Introduction / hook section
 
@@ -50,8 +50,8 @@
 
 
 
-    <div id="mission-section" class="clearfix"><!-- Bill Ford -->
-
+    <div id="mission-section" class="section row"><!-- Bill Ford -->
+      <a id="mission"></a>
       Mission / about section
 
     </div><!-- End #mission-section -->
@@ -63,7 +63,7 @@
 
 
 
-    <div id="who-section" class="clearfix"><!-- Sara Cantler -->
+    <div id="who-section" class="section row"><!-- Sara Cantler -->
 
       <h1>Members</h1>
 
@@ -116,7 +116,7 @@
 
 
 
-    <div id="gallery-section" class="clearfix"><!-- Kelly O'Donnell / Eric Conrad -->
+    <div id="gallery-section" class="section row"><!-- Kelly O'Donnell / Eric Conrad -->
 
       <h1>Gallery</h1>
 
@@ -179,7 +179,7 @@
 
 
 
-  <div id="contact-section" class="clearfix"><!-- Seth Budrow -->
+  <div id="contact-section" class="section row"><!-- Seth Budrow -->
 
     Contact section
 
@@ -192,7 +192,7 @@
 
 
 
-  <div id="global-footer" class="clearfix"><!-- Katie Zawadowicz -->
+  <div id="global-footer" class="section row"><!-- Katie Zawadowicz -->
 
     <p> designalliance.hcc@gmail.com </p>
 
