put the contents of each sections inside of a .center div
this will make it easier to keep the width of the page consistent

--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
   <div class="site-container">
 
     <div id="global-navigation" class="section row"><!-- Katie Zawadowicz -->
+      <div class="center">
 
-      <a class="button" href="index.html"> Home </a>
-      <a class="button" href="#mission"> Mission </a>
-      <a class="button" href="bios.html"> Who We Are </a>
-      <a class="button" href="gallery.html"> Gallery </a>
-      <a class="button" href=""> Work With Us </a>
+        <a class="button" href="index.html"> Home </a>
+        <a class="button" href="#mission"> Mission </a>
+        <a class="button" href="bios.html"> Who We Are </a>
+        <a class="button" href="gallery.html"> Gallery </a>
+        <a class="button" href=""> Work With Us </a>
 
+      </div>
     </div><!-- End #global-navigation -->
 
 
@@ -39,9 +41,11 @@
 
 
     <div id="intro-section" class="section row"><!-- Jacob Bendan -->
+      <div class="center">
 
-      Introduction / hook section
+        Introduction / hook section
 
+      </div>
     </div><!-- End #intro-section -->
 
 
@@ -52,8 +56,11 @@
 
     <div id="mission-section" class="section row"><!-- Bill Ford -->
       <a id="mission"></a>
-      Mission / about section
+      <div class="center">
 
+        Mission / about section
+
+      </div>
     </div><!-- End #mission-section -->
 
 
@@ -64,49 +71,51 @@
 
 
     <div id="who-section" class="section row"><!-- Sara Cantler -->
+      <div class="center">
 
-      <h1>Members</h1>
+        <h1>Members</h1>
 
-      <div class="profile advisor">
-        <img src="images/bios/deanna.png" alt="Advisor-Photo">
-        <p class="main-text">Kenneth Jones</p>
-        <p class="subtext">Advisor</p>
-        <a href="url">View Profile</a>
+        <div class="profile advisor">
+          <img src="images/bios/deanna.png" alt="Advisor-Photo">
+          <p class="main-text">Kenneth Jones</p>
+          <p class="subtext">Advisor</p>
+          <a href="url">View Profile</a>
+        </div>
+
+        <div class="profile president">
+          <img src="images/bios/alison.png" alt="President-Photo">
+          <p class="main-text">Alison Hazel</p>
+          <p class="subtext">President</p>
+          <a href="url">View Profile</a>
+
+        </div>
+
+        <div class="profile vice-president">
+          <img src="images/bios/courtney.png" alt="Vice-President-Photo">
+          <p class="main-text">Courtney Schultz</p>
+          <p class="subtext">Vice-President</p>
+          <a href="url">View Profile</a>
+
+        </div>
+
+        <div class="profile secretary">
+          <img src="images/bios/nikki.png" alt="Secretary-Photo">
+          <p class="main-text">Nikki Ishak</p>
+          <p class="subtext">Secretary</p>
+          <a href="url">View Profile</a>
+
+        </div>
+
+        <div class="profile treasurer">
+          <img src="images/bios/phoebe.png" alt="Treasurer-Photo">
+          <p class="main-text">Phoebe Monroe</p>
+          <p class="subtext">Treasurer</p>
+          <a href="url">View Profile</a>
+        </div>
+
+        <a class="see-all" href="url">View All Profiles</a>
+
       </div>
-
-      <div class="profile president">
-        <img src="images/bios/alison.png" alt="President-Photo">
-        <p class="main-text">Alison Hazel</p>
-        <p class="subtext">President</p>
-        <a href="url">View Profile</a>
-
-      </div>
-
-      <div class="profile vice-president">
-        <img src="images/bios/courtney.png" alt="Vice-President-Photo">
-        <p class="main-text">Courtney Schultz</p>
-        <p class="subtext">Vice-President</p>
-        <a href="url">View Profile</a>
-
-      </div>
-
-      <div class="profile secretary">
-        <img src="images/bios/nikki.png" alt="Secretary-Photo">
-        <p class="main-text">Nikki Ishak</p>
-        <p class="subtext">Secretary</p>
-        <a href="url">View Profile</a>
-
-      </div>
-
-      <div class="profile treasurer">
-        <img src="images/bios/phoebe.png" alt="Treasurer-Photo">
-        <p class="main-text">Phoebe Monroe</p>
-        <p class="subtext">Treasurer</p>
-        <a href="url">View Profile</a>
-      </div>
-
-      <a class="see-all" href="url">View All Profiles</a>
-
     </div><!-- End #who-section -->
 
 
@@ -117,59 +126,61 @@
 
 
     <div id="gallery-section" class="section row"><!-- Kelly O'Donnell / Eric Conrad -->
+      <div class="center">
 
-      <h1>Gallery</h1>
+        <h1>Gallery</h1>
 
-      <div id="carousel">
+        <div id="carousel">
 
-        <nav>
-          <button class="active"></button>
-          <button></button>
-          <button></button>
-          <button></button>
-        </nav>
+          <nav>
+            <button class="active"></button>
+            <button></button>
+            <button></button>
+            <button></button>
+          </nav>
 
-        <div class="inner">
-          <ul class="clearfix">
-            <li>
-              <a href="works/works.html">
-                <img src="images/gallery/crops/Williams1.jpg" alt="">
-              </a>
-            </li>
-            <li>
-              <a href="works/works.html">
-                <img src="images/gallery/crops/Williams2.jpg" alt="">
-              </a>
-            </li>
-            <li>
-              <a href="works/works.html">
-                <img src="images/gallery/crops/harris4.jpg" alt="">
-              </a>
-            </li>
-            <li>
-              <a href="works/works.html">
-                <img src="images/gallery/crops/Lu1.jpg" alt="">
-              </a>
-            </li>
-          </ul>
+          <div class="inner">
+            <ul class="clearfix">
+              <li>
+                <a href="works/works.html">
+                  <img src="images/gallery/crops/Williams1.jpg" alt="">
+                </a>
+              </li>
+              <li>
+                <a href="works/works.html">
+                  <img src="images/gallery/crops/Williams2.jpg" alt="">
+                </a>
+              </li>
+              <li>
+                <a href="works/works.html">
+                  <img src="images/gallery/crops/harris4.jpg" alt="">
+                </a>
+              </li>
+              <li>
+                <a href="works/works.html">
+                  <img src="images/gallery/crops/Lu1.jpg" alt="">
+                </a>
+              </li>
+            </ul>
+          </div>
+
         </div>
+
+        <!-- <img src="images/gallery/crops/Williams2.jpg">
+        <img src="images/gallery/crops/harris4.jpg">
+        <img src="images/gallery/crops/Lu1.jpg">
+        <img src="images/gallery/crops/printdummymartin.jpg">
+        <img src="images/gallery/crops/rakowski.jpg">
+        <img src="images/gallery/crops/Schultz62.jpg">
+        <img src="images/gallery/crops/tapelifting3.jpg"> -->
 
       </div>
 
-      <!-- <img src="images/gallery/crops/Williams2.jpg">
-      <img src="images/gallery/crops/harris4.jpg">
-      <img src="images/gallery/crops/Lu1.jpg">
-      <img src="images/gallery/crops/printdummymartin.jpg">
-      <img src="images/gallery/crops/rakowski.jpg">
-      <img src="images/gallery/crops/Schultz62.jpg">
-      <img src="images/gallery/crops/tapelifting3.jpg"> -->
+      <div id="photoLink">
+        <a href="gallery.html">View All Works</a>
+      </div>
 
     </div>
-
-    <div id="photoLink">
-      <a href="gallery.html">View All Works</a>
-    </div>
-
   </div><!-- End #gallery-section -->
 
 
@@ -180,9 +191,11 @@
 
 
   <div id="contact-section" class="section row"><!-- Seth Budrow -->
+    <div class="center">
 
-    Contact section
+      Contact section
 
+    </div>
   </div><!-- End #contact-section -->
 
 
@@ -193,18 +206,20 @@
 
 
   <div id="global-footer" class="section row"><!-- Katie Zawadowicz -->
+    <div class="center">
 
-    <p> designalliance.hcc@gmail.com </p>
+      <p> designalliance.hcc@gmail.com </p>
 
-    <p>  Harford Community College </p>
-    <p>  c/o Design Alliance </p>
-    <p>  Visual, Preforming & Applied Arts </p>
-    <p>  Art + Design Program </p>
-    <p>  401 Thomas Run Road </p>
-    <p>  Bel Air, MD 21015 </p>
+      <p>  Harford Community College </p>
+      <p>  c/o Design Alliance </p>
+      <p>  Visual, Preforming & Applied Arts </p>
+      <p>  Art + Design Program </p>
+      <p>  401 Thomas Run Road </p>
+      <p>  Bel Air, MD 21015 </p>
 
-    <a href="https://www.facebook.com/Design-Alliance-154206664664725/"> <img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook </a>
+      <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook</a>
 
+    </div>
   </div><!-- End #global-footer -->
 
 
