--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
   <!--[if lt IE 8]>
   <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-  <div class="site-container">
+  <div class="page-container">
 
     <div class="gallery">
 
@@ -57,7 +57,7 @@
 
   </div><!-- End #global-footer -->
 
-</div><!-- End .site-container -->
+</div><!-- End .page-container -->
 <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
